Fix close button overlap - add right padding to description area

--- a/static/css/modal-beta.css
+++ b/static/css/modal-beta.css
@@ -144,6 +144,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-right: 60px; /* Prevent text overlap with close button */
 }
 
 .modal-beta-description {
